8012547: Code cache flushing can get stuck reclaming of memory

Keep sweeping regardless of if we are flushing

Reviewed-by: kvn, twisti